--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
 		"openai": "^4.73.0",
 		"prismjs": "^1.29.0",
 		"resend": "^4.0.1",
+		"simple-icons": "^14.1.0",
 		"tailwind-merge": "^2.5.3",
 		"tailwind-variants": "^0.2.1",
 		"zod": "^3.23.8"
