--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
     },
     {
       "source": "/t/(.*)",
-      "destination": "https://cms.2077.xyz/s/$1"
+      "destination": "https://cms.2077.xyz/t/$1"
     },
     {
       "source": "/about",
