--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
 		"@cartamd/plugin-code": "^4.0.6",
 		"@cartamd/plugin-math": "^4.2.1",
 		"@fontsource-variable/inter": "^5.1.0",
+		"@fontsource/ibm-plex-sans": "^5.1.1",
+		"@fontsource-variable/kode-mono": "^5.1.1",
+		"@fontsource-variable/space-grotesk": "^5.1.1",
 		"@google-cloud/local-auth": "^3.0.1",
 		"@googleapis/docs": "^3.3.0",
 		"@neondatabase/serverless": "^0.10.3",
