--- a/package.json
+++ b/package.json
@@ -15,34 +15,28 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.48.0",
-		"@sveltejs/adapter-auto": "^3.2.5",
-		"@sveltejs/kit": "^2.0.0",
+		"@playwright/test": "^1.41.1",
+		"@sveltejs/adapter-auto": "^3.1.1",
+		"@sveltejs/kit": "^2.4.3",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
-		"@types/eslint": "^9.6.0",
+		"@types/eslint": "^8.56.2",
 		"@types/prismjs": "^1.26.4",
-		"autoprefixer": "^10.4.20",
-		"bits-ui": "^0.21.16",
-		"drizzle-kit": "^0.28.1",
-		"eslint": "^9.0.0",
+		"autoprefixer": "^10.4.17",
+		"bits-ui": "^0.21.1",
+		"drizzle-kit": "^0.20.14",
+		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.36.0",
-		"globals": "^15.0.0",
-		"lucide-svelte": "^0.451.0",
-		"mode-watcher": "^0.4.1",
-		"prettier": "^3.1.1",
+		"eslint-plugin-svelte": "^2.35.1",
+		"lucide-svelte": "^0.323.0",
+		"mode-watcher": "^0.1.2",
+		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.1.2",
-		"svelte": "^5.0.0-next.1",
-		"svelte-check": "^4.0.0",
-		"svelte-lightbox": "^1.1.5",
-		"svelte-sonner": "^0.3.28",
-		"tailwindcss": "^3.4.13",
-		"ts-node": "^10.9.2",
-		"tsx": "^4.19.2",
-		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.0.0",
-		"vite": "^5.0.3",
-		"vitest": "^2.0.0"
+		"svelte": "^5.19.6",
+		"svelte-check": "^3.6.3",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5.3.3",
+		"vite": "^5.0.12",
+		"vitest": "^1.2.2"
 	},
 	"type": "module",
 	"dependencies": {
@@ -50,32 +44,30 @@
 		"@cartamd/plugin-attachment": "^4.1.1",
 		"@cartamd/plugin-code": "^4.0.6",
 		"@cartamd/plugin-math": "^4.2.1",
-		"@fontsource-variable/inter": "^5.1.0",
-		"@fontsource/ibm-plex-sans": "^5.1.1",
-		"@fontsource-variable/kode-mono": "^5.1.1",
-		"@fontsource-variable/space-grotesk": "^5.1.1",
-		"@google-cloud/local-auth": "^3.0.1",
-		"@googleapis/docs": "^3.3.0",
-		"@neondatabase/serverless": "^0.10.3",
-		"@sveltejs/adapter-vercel": "^5.4.8",
-		"@vercel/analytics": "^1.4.1",
-		"@vercel/functions": "^1.5.0",
+		"@fontsource-variable/inter": "^5.0.16",
+		"@fontsource-variable/kode-mono": "^5.0.1",
+		"@fontsource-variable/space-grotesk": "^5.0.16",
+		"@neondatabase/serverless": "^0.10.4",
+		"@sveltejs/adapter-vercel": "^5.1.0",
+		"@vercel/analytics": "^1.1.2",
 		"carta-md": "^4.6.7",
-		"clsx": "^2.1.1",
-		"dotenv": "^16.4.5",
-		"drizzle-orm": "^0.36.2",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.0",
+		"dotenv": "^16.4.7",
+		"drizzle-orm": "^0.29.3",
 		"drizzle-zod": "^0.5.1",
-		"embla-carousel-auto-scroll": "^8.3.0",
+		"embla-carousel-auto-scroll": "^8.5.2",
 		"embla-carousel-svelte": "^8.3.0",
-		"googleapis": "^144.0.0",
 		"html2canvas": "^1.4.1",
-		"isomorphic-dompurify": "^2.16.0",
+		"isomorphic-dompurify": "^2.21.0",
 		"jspdf": "^2.5.2",
-		"openai": "^4.73.0",
 		"prismjs": "^1.29.0",
-		"resend": "^4.0.1",
-		"tailwind-merge": "^2.5.3",
-		"tailwind-variants": "^0.2.1",
-		"zod": "^3.23.8"
+		"svelte-sonner": "^0.3.28",
+		"tailwind-merge": "^2.2.1",
+		"tailwind-variants": "^0.2.0",
+		"zod": "^3.22.4"
+	},
+	"overrides": {
+		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6"
 	}
 }
