--- a/package.json
+++ b/package.json
@@ -51,15 +51,16 @@
 		"@cartamd/plugin-code": "^4.0.6",
 		"@cartamd/plugin-math": "^4.2.1",
 		"@fontsource-variable/inter": "^5.1.0",
-		"@fontsource/ibm-plex-sans": "^5.1.1",
 		"@fontsource-variable/kode-mono": "^5.1.1",
 		"@fontsource-variable/space-grotesk": "^5.1.1",
+		"@fontsource/ibm-plex-sans": "^5.1.1",
 		"@google-cloud/local-auth": "^3.0.1",
 		"@googleapis/docs": "^3.3.0",
 		"@neondatabase/serverless": "^0.10.3",
 		"@sveltejs/adapter-vercel": "^5.4.8",
 		"@vercel/analytics": "^1.4.1",
 		"@vercel/functions": "^1.5.0",
+		"algoliasearch": "^5.20.0",
 		"carta-md": "^4.6.7",
 		"clsx": "^2.1.1",
 		"dotenv": "^16.4.5",
@@ -69,6 +70,7 @@
 		"embla-carousel-svelte": "^8.3.0",
 		"googleapis": "^144.0.0",
 		"html2canvas": "^1.4.1",
+		"instantsearch.js": "^4.77.3",
 		"isomorphic-dompurify": "^2.16.0",
 		"jspdf": "^2.5.2",
 		"openai": "^4.73.0",
