--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
 		"@cartamd/plugin-code": "^4.0.6",
 		"@cartamd/plugin-math": "^4.2.1",
 		"@fontsource-variable/inter": "^5.1.0",
-		"@fontsource/ibm-plex-sans": "^5.1.1",
 		"@fontsource-variable/kode-mono": "^5.1.1",
 		"@fontsource-variable/space-grotesk": "^5.1.1",
+		"@fontsource/ibm-plex-sans": "^5.1.1",
 		"@google-cloud/local-auth": "^3.0.1",
 		"@googleapis/docs": "^3.3.0",
 		"@neondatabase/serverless": "^0.10.3",
@@ -62,6 +62,7 @@
 		"@vercel/functions": "^1.5.0",
 		"carta-md": "^4.6.7",
 		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
 		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.36.2",
 		"drizzle-zod": "^0.5.1",
@@ -71,6 +72,7 @@
 		"html2canvas": "^1.4.1",
 		"isomorphic-dompurify": "^2.16.0",
 		"jspdf": "^2.5.2",
+		"katex": "^0.16.21",
 		"openai": "^4.73.0",
 		"prismjs": "^1.29.0",
 		"resend": "^4.0.1",
