--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "^0.21.16",
 		"drizzle-kit": "^0.28.1",
+		"embla-carousel-svelte": "^8.3.0",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -51,9 +52,9 @@
 		"@cartamd/plugin-code": "^4.0.6",
 		"@cartamd/plugin-math": "^4.2.1",
 		"@fontsource-variable/inter": "^5.1.0",
-		"@fontsource/ibm-plex-sans": "^5.1.1",
 		"@fontsource-variable/kode-mono": "^5.1.1",
 		"@fontsource-variable/space-grotesk": "^5.1.1",
+		"@fontsource/ibm-plex-sans": "^5.1.1",
 		"@google-cloud/local-auth": "^3.0.1",
 		"@googleapis/docs": "^3.3.0",
 		"@neondatabase/serverless": "^0.10.3",
@@ -62,11 +63,11 @@
 		"@vercel/functions": "^1.5.0",
 		"carta-md": "^4.6.7",
 		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
 		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.36.2",
 		"drizzle-zod": "^0.5.1",
 		"embla-carousel-auto-scroll": "^8.3.0",
-		"embla-carousel-svelte": "^8.3.0",
 		"googleapis": "^144.0.0",
 		"html2canvas": "^1.4.1",
 		"isomorphic-dompurify": "^2.16.0",
@@ -74,6 +75,7 @@
 		"openai": "^4.73.0",
 		"prismjs": "^1.29.0",
 		"resend": "^4.0.1",
+		"svelte-carousel": "^1.0.25",
 		"tailwind-merge": "^2.5.3",
 		"tailwind-variants": "^0.2.1",
 		"zod": "^3.23.8"
