--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		"prismjs": "^1.29.0",
 		"resend": "^4.0.1",
 		"svelte-carousel": "^1.0.25",
+		"svelte-motion": "^0.12.2",
 		"tailwind-merge": "^2.5.3",
 		"tailwind-variants": "^0.2.1",
 		"zod": "^3.23.8"
