--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
 		"drizzle-orm": "^0.36.2",
 		"drizzle-zod": "^0.5.1",
 		"embla-carousel-auto-scroll": "^8.3.0",
+		"embla-carousel-autoplay": "^8.5.2",
 		"googleapis": "^144.0.0",
 		"html2canvas": "^1.4.1",
 		"isomorphic-dompurify": "^2.16.0",
