--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"@types/eslint": "^9.6.0",
 		"@types/prismjs": "^1.26.4",
 		"autoprefixer": "^10.4.20",
-		"bits-ui": "^0.21.16",
+		"bits-ui": "^0.22.0",
 		"drizzle-kit": "^0.28.1",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
@@ -60,6 +60,7 @@
 		"@sveltejs/adapter-vercel": "^5.4.8",
 		"@vercel/analytics": "^1.4.1",
 		"@vercel/functions": "^1.5.0",
+		"algoliasearch": "^5.20.2",
 		"carta-md": "^4.6.7",
 		"clsx": "^2.1.1",
 		"dompurify": "^3.2.4",
