--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
 		"svelte-motion": "^0.12.2",
 		"tailwind-merge": "^2.5.3",
 		"tailwind-variants": "^0.2.1",
+		"tailwindcss-motion": "^1.1.0",
 		"zod": "^3.23.8"
 	}
 }
