--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"@vercel/functions": "^1.5.0",
 		"algoliasearch": "^5.20.2",
 		"carta-md": "^4.6.7",
+		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"dompurify": "^3.2.4",
 		"dotenv": "^16.4.5",
