--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"@cartamd/plugin-attachment": "^4.1.1",
 		"@cartamd/plugin-code": "^4.0.6",
 		"@cartamd/plugin-math": "^4.2.1",
+		"@fontsource-variable/geist-mono": "^5.0.1",
 		"@fontsource-variable/hubot-sans": "^5.0.1",
 		"@fontsource-variable/inter": "^5.1.0",
 		"@fontsource-variable/kode-mono": "^5.1.1",
