--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
 		"tailwind-merge": "^2.5.3",
 		"tailwind-variants": "^0.2.1",
 		"tailwindcss-motion": "^1.1.0",
+		"tocbot": "^4.35.0",
 		"zod": "^3.23.8"
 	}
 }
