--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
 	"rewrites": [
 		{
+			"source": "/spectra-finance-moving-toward-a-more-robust-defi-ird-ecosystem",
+			"destination": "/spectra-finance-moving-toward-a-more-robust-defi-and-ird-ecosystem"
+		},
+		{
 			"source": "/p/(.*)",
 			"destination": "https://cms.2077.xyz/p/$1"
 		},
@@ -14,7 +18,7 @@
 		},
 		{
 			"source": "/archive",
-			"destination": "https://www.research.2077.xyz/"
+			"destination": "https://research.2077.xyz/"
 		},
 		{
 			"source": "/api/(.*)",
