--- a/config.example.json
+++ b/config.example.json
@@ -1,13 +1,13 @@
 {
   "ghost": {
-    "apiUrl": "https://ghost-2077.arvensis.systems",
-    "apiKey": "007a3b7fc8a10ab03bf88d748b",
+    "apiUrl": "$PUBLIC_GHOST_URL",
+    "apiKey": "$PUBLIC_GHOST_KEY",
     "version": "v5.0"
   },
   "algolia": {
-    "appId": "J1CCIFNBD5",
-    "apiKey": "1014ae79f982ff8373f5b13252046a3f",
-    "index": "ghost-cms-articles"
+    "appId": "$VITE_ALGOLIA_APP_ID",
+    "apiKey": "$VITE_ALGOLIA_ADMIN_KEY",
+    "index": "$VITE_ALGOLIA_INDEX_NAME"
   },
   "indexSettings": {
     "searchableAttributes": ["title", "excerpt", "content", "created_at"],
