--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
 		"format": "prettier --write .",
 		"test:integration": "playwright test",
 		"test:unit": "vitest",
+		"setup-config": "[ -f config.json ] || cp config.example.json config.json",
 		"replace-env": "node replace-env.js",
 		"index": "pnpm exec algolia index config.json",
-		"index-all": "pnpm replace-env && pnpm index"
+		"index-all": "pnpm setup-config && pnpm replace-env && pnpm index"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.48.0",
