--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
 		"@sveltejs/adapter-auto": "^3.2.5",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+		"@tryghost/algolia": "^0.2.11",
 		"@types/eslint": "^9.6.0",
 		"@types/prismjs": "^1.26.4",
-		"@tryghost/algolia": "^0.2.11",
 		"@types/tryghost__content-api": "^1.3.17",
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "^0.22.0",
@@ -69,6 +69,7 @@
 		"@neondatabase/serverless": "^0.10.3",
 		"@supabase/supabase-js": "^2.49.1",
 		"@sveltejs/adapter-vercel": "^5.4.8",
+		"@sveltejs/enhanced-img": "^0.4.4",
 		"@tryghost/content-api": "^1.11.21",
 		"@vercel/analytics": "^1.4.1",
 		"@vercel/functions": "^1.5.0",
