--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
 		"tailwind-variants": "^0.2.1",
 		"tailwindcss-motion": "^1.1.0",
 		"tocbot": "^4.35.0",
+		"vite-plugin-purgecss": "^0.2.13",
 		"zod": "^3.23.8"
 	}
 }
